hw finished and some

--- a/petfax/templates/pets/index.html
+++ b/petfax/templates/pets/index.html
@@ -10,9 +10,6 @@
 <body>
     <div class="container">
         <H1>PetFax</H1>
-        <div class="callout">
-            Welcome to PetFax! We are a no-kill shelter dedicated to finding our pets loving homes and educating the public with fun facts.
-        </div>
         <div class="pets-container">
             {% for pet in pets %}
                 <div class="pet">
@@ -23,7 +20,7 @@
             {% endfor %}
         </div>
         <div class="callout">
-            We'd love to learn more fun facts! <a href="/facts/new">Submit some here.</a>
+            Give us some new facts! <a href="/facts/new">Submit some facts here.</a>
         </div>
     </div>
 </body>
